--- a/fred/Cargo.toml
+++ b/fred/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 name = "day-1"
 path = "src/day_1/main.rs"
 
+[[bin]]
+name = "day-2"
+path = "src/day_2/main.rs"
+
 [dependencies]
