--- a/fred/Cargo.toml
+++ b/fred/Cargo.toml
@@ -11,4 +11,9 @@ path = "src/day_1/main.rs"
 name = "day-2"
 path = "src/day_2/main.rs"
 
+[[bin]]
+name = "day-3"
+path = "src/day_3/main.rs"
+
 [dependencies]
+regex = "1.11.1"
