--- a/fred/Cargo.toml
+++ b/fred/Cargo.toml
@@ -15,5 +15,9 @@ path = "src/day_2/main.rs"
 name = "day-3"
 path = "src/day_3/main.rs"
 
+[[bin]]
+name = "day-4"
+path = "src/day_4/main.rs"
+
 [dependencies]
 regex = "1.11.1"
