--- a/fred/Cargo.toml
+++ b/fred/Cargo.toml
@@ -19,5 +19,9 @@ path = "src/day_3/main.rs"
 name = "day-4"
 path = "src/day_4/main.rs"
 
+[[bin]]
+name = "day-5"
+path = "src/day_5/main.rs"
+
 [dependencies]
 regex = "1.11.1"
