--- a/fred/Cargo.toml
+++ b/fred/Cargo.toml
@@ -23,5 +23,9 @@ path = "src/day_4/main.rs"
 name = "day-5"
 path = "src/day_5/main.rs"
 
+[[bin]]
+name = "day-6"
+path = "src/day_6/main.rs"
+
 [dependencies]
 regex = "1.11.1"
