--- a/fred/Cargo.toml
+++ b/fred/Cargo.toml
@@ -27,5 +27,11 @@ path = "src/day_5/main.rs"
 name = "day-6"
 path = "src/day_6/main.rs"
 
+[[bin]]
+name = "day-7"
+path = "src/day_7/main.rs"
+
 [dependencies]
+itertools = "0.13.0"
+rayon = "1.10.0"
 regex = "1.11.1"
